# Projeto-AEDA

./: AEDATreino.vpp  BuyNow.cpp  BuyNow.h  BuyNowUI.cpp  BuyNowUI.h  CMakeLists.txt  Carrinha.cpp  Carrinha.h  CartaoCredito.cpp  CartaoCredito.h  Categoria.cpp  Categoria.h  Categorias.txt  Cliente.cpp  Cliente.h  ClienteRegistado.cpp  ClienteRegistado.h  Clientes.txt  Date.cpp  Date.h  Fisica.txt  Fornecedor.cpp  Fornecedor.h  LojaFisica.cpp  LojaFisica.h  LojaOnline.cpp  LojaOnline.h  MbWay.cpp  MbWay.h  Mensagem.cpp  Mensagem.h  Multibanco.cpp  Multibanco.h  NomesFisicas.txt  NumeroTransacoes.cpp  NumeroTransacoes.h  Online.txt  Pagamento.cpp  Pagamento.h  Produto.cpp  (+12 more)
AEDA2021Parte2_Turma7_G7/: TransaçõesOnlineParte2.pptx
AEDA2021Parte2_Turma7_G7/codigo/: BuyNow.cpp  BuyNow.h  BuyNowUI.cpp  Cliente.h  Fornecedor.cpp  Pagamento.h  README.md  Transacao.cpp  Transferencia.h
AEDA2021Parte2_Turma7_G7/html/: _a_e_d_a2021___turma7___g7_2_c_xC3_xB3digo_2_buy_now_8h_source.html  _a_e_d_a2021___turma7___g7_2_c_xC3_xB3digo_2_cartao_credito_8h_source.html  annotated.html  (+83 more)
AEDA2021_Turma7_G7/: Apresentacao Projeto 1.pptx
Diagrama Classes e Site/: Apresentacao Projeto 1.pptx  Site UML.txt  UML.txt  link imagem UML.txt
Submissao/: BuyNowUI.cpp  CartaoCredito.cpp  ClienteRegistado.cpp  Fornecedor.h  LojaFisica.h  LojaOnline.cpp  Online.txt  Produtos.txt  Reposicoes.txt
codigoErrado/: BuyNow.cpp  BuyNow.h  BuyNowUI.cpp  BuyNowUI.h  CMakeLists.txt  Date.cpp  Fornecedor.cpp  Fornecedor.h  LojaOnline.cpp  LojaOnline.h  Produto.h  Reposicao.h  Transferencia.cpp  Transferencia.h
(+245 files in other folders)
